# RoAG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: .gitignore
modelGeneration/: .gitignore  main.py  model.json  requirements.txt  test.py
modelGeneration/core/: door.py  ground.py  model.py  wall.py  walls.py  window.py
modelGeneration/util/: __init__.py  dimension_converter.py
src/: CMakeLists.txt  main.cpp
src/archgen/: archgen.cpp  archgen.hpp  cube.cpp  cube.hpp  ground.hpp  light.cpp  light.h  model.cpp  model.h  pillar.hpp  polygon_room_ground.hpp  room_ground.hpp
src/core/: camera.hpp  object.cpp  object.h  opengl_drawable.cpp  opengl_drawable.hpp  opengl_glloader.cpp  opengl_glloader.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_window.cpp  opengl_window.hpp  plane_drawable.hpp  plane_framework.cpp  plane_framework.hpp  shadow_map.h  shodow_map.cpp
src/shaders/: blinn-phong.frag  blinn-phong.vert  dir-shadow.vert  easy.frag  easy.vert  point-shadow.frag  point-shadow.geom  point-shadow.vert
